2009-04-14  Andreas Kupries  <andreask@activestate.com>

	* pop3d.man: Updated documentation with example on how to use the
	  option -socket to secure the server channel with TLS.
	* pop3d.tcl: Fixed typos in comments.

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.test: Updated to prevent the multiple loading of comm.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.man: Fixed all warnings due to use of now deprecated
	* pop3d_dbox.man: commands. Added a section about how to give feedback.
	* pop3d_udb.man:

2006-10-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.test: Accept anything matching 127.*.*.* as ip-address for
	  localhost.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries <andreask@activestate.com>

	* pop3d.test: Fixed the tests requiring tcltest 2.x syntax,
	  despite our declaration that tcltest 1.0 is acceptable. This
	  broke 8.2/8.3, and the missing shutdown of the fake client
	  processes then hung the testsuite at the end.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.test: .... Fixed usage of temp. files by testsuite. Fixed
	* pop3d_dbox.test: use of duplicate test names.
	* pop3d_udb.test: 

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d.test: More boilerplate simplified via use of test support.
	* pop3d_dbox.test:
	* pop3d_udb.test:
